# hpffp-1

./: readme.md
exercises/: ch2.hs
exercises/ch1/: ch1.md
exercises/ch10/: dbProc.hs  fibs.hs  warmUp.hs  withFolds.hs
exercises/ch11/: bt.hs  card.hs  garden.hs  hutton.hs  language.hs  phone.hs  programmers.hs  quad.hs  subsequents.hs  tooMany.hs  vehicles.hs
exercises/ch12/: nats.hs  smallEither.hs  smallMaybe.hs  stringProc.hs  unfold.hs
exercises/ch15/: madlib.hs  only.hs
exercises/ch2/: ch2.hs
exercises/ch3/: Reverse.hs  ch3.hs
exercises/ch4/: Ch4Ex.hs  MoodSwing.hs
exercises/ch5/: applyYourself.hs  arith3Broken.hs  determineTheType.hs  doesItCompile.hs  typeKwanDo.hs  writeAFunction.hs  writeATypeSignature.hs
exercises/ch6/: doesItTypecheck.hs  electricTypealoo.hs  eqInstances.hs
exercises/ch7/: arith.hs  artfulDodgy.hs  casePractice.hs  grabBag.hs  guardDuty.hs  varietyPack.hs  writeCode.hs
exercises/ch8/: applyTimes.hs  mccarthy.hs  recursion.hs
exercises/ch8/wordNum/: README.md  wordNum.cabal
exercises/ch8/wordNum/src/: wordNumber.hs
exercises/ch8/wordNum/test/: WordNumTest.hs
exercises/ch9/: ciphers.hs  enumFromTo.hs  myLines.hs  myStd.hs  myWords.hs  myZip.hs  uppers.hs
notes/ch11/: construct.hs  persons.hs
notes/ch14/: coarb.hs  trivial.hs
notes/ch14/addition/: Addition.hs  (+2 more)
notes/ch2/: readme.md  test.hs
notes/ch24/: LearnParsers.hs
notes/ch3/: print1.hs  print2.hs  print3.hs  print3broken.hs
notes/ch5/: Nonsense.hs
notes/ch6/: dayOfWeek.hs
notes/ch7/: penguin.hs  registeredUser.hs
notes/ch9/: safeTail.hs
(+4 files in other folders)
