name:                wordNum
version:             0.1.0.0
author:              dan pittman
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             WordNumTest.hs
  build-depends:       base
                     , wordNum
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
